more stability